--- a/index.html
+++ b/index.html
@@ -5,6 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
   <style>
+    /* Добавленные стили */
+    button {
+      margin: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    button:active {
+      background-color: #004280;
+    }
+
+    #result-message {
+      text-align: center;
+    }
+
+    #result-text {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    #result-message button {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #result-message button:hover {
+      background-color: #218838;
+    }
+
+    #result-message button:active {
+      background-color: #1e7e34;
+    }
+
+    /* Оригинальные стили */
     #result-message {
       display: none;
       position: fixed;
